MetaFunction: rewrite the dynamic metaobject writing to make it work with Qt5.

With unittest.

BUG: 343779
FIXED-IN: 5.7
CHANGELOG: fix Kross::MetaFunction so it works with Qt5's metaobject system