src/core/metafunction.h
@@ -29,9 +29,12 @@
 #include <QArgument>
 #include <QByteRef>
 #include <QPointer>
+#include <QVector>
 
 namespace Kross
 {
+
+static const char s_fakeClassName[] = "ScriptFunction";
 
 /**
  * The MetaFunction class implements a QObject to provide an adaptor
@@ -54,47 +57,76 @@ public:
     * be executed if the QObject emits the signal.
     */
     MetaFunction(QObject *sender, const QByteArray &signal)
-        : QObject(), m_sender(sender), m_signature(QMetaObject::normalizedSignature(signal))
+        : QObject(), m_sender(sender), m_signature(QMetaObject::normalizedSignature(signal.constData()))
     {
         //krossdebug(QString("MetaFunction sender=\"%1\" signal=\"%2\"").arg(sender->objectName()).arg(m_signature.constData()));
-        const uint signatureSize = m_signature.size() + 1;
+
+        const QByteArray signalName = signal.left(signal.indexOf('('));
+
+        const QList<QByteArray> types = parameterTypeNamesFromSignature(m_signature.constData());
+
+        QList<int> parameterMetaTypes;
+        parameterMetaTypes.append(QMetaType::Void); // return type
+        foreach(const QByteArray &typeName, types) {
+            parameterMetaTypes.append(QMetaType::type(typeName.constData())); // ## might be missing support for non-builtin types...
+        }
+
+        m_data.resize(20 + parameterMetaTypes.count());
 
         // content
-        m_data[0] = 1;  // revision
-        m_data[1] = 0;  // classname
-        m_data[2] = 0;  // classinfo
-        m_data[3] = 0;  // classinfo
-        m_data[4] = 1;  // methods
-        m_data[5] = 15; // methods
-        m_data[6] = 0;  // properties
-        m_data[7] = 0;  // properties
-        m_data[8] = 0;  // enums/sets
-        m_data[9] = 0;  // enums/sets
+        m_data[0] = 7;  // revision
+        m_data[1] = 0;  // classname (the first string)
+        m_data[2] = 0;  // classinfo count
+        m_data[3] = 0;  // classinfo data
+        m_data[4] = 1;  // methods count
+        m_data[5] = 14; // methods data
+        m_data[6] = 0;  // properties count
+        m_data[7] = 0;  // properties data
+        m_data[8] = 0;  // enums/sets count
+        m_data[9] = 0;  // enums/sets data
+        m_data[10] = 0; // constructors count
+        m_data[11] = 0; // constructors data
+        m_data[12] = 0; // flags
+        m_data[13] = 0; // signal count
 
-        // slots
-        m_data[15] = 15;  // signature start
-        m_data[16] = 15 + signatureSize;  // parameters start
-        m_data[17] = 15 + signatureSize;  // type start
-        m_data[18] = 15 + signatureSize;  // tag start
-        m_data[19] = 0x0a; // flags
-        m_data[20] = 0;    // eod
+        // slots: name, argc, parameters, tag, flags
+        m_data[14] = 1;  // name
+        m_data[15] = types.count();  // parameter count
+        m_data[16] = 19;  // parameter data
+        m_data[17] = 2;  // tag (RequiresVariantMetaObject)
+        m_data[18] = 0x0a; // flags (public slot)
 
-        // data
-        m_stringData = QByteArray("ScriptFunction\0", 15);
-        m_stringData += m_signature;
-        m_stringData += QByteArray("\0\0", 2);
+        // slots: parameters
+        int i = 19;
+        foreach (int metaType, parameterMetaTypes) {
+            m_data[i++] = metaType;
+        }
+
+        m_data[i++] = 0;    // eod
+
+        // string table
+        // qt_metacast expects the first string in the string table to be the class name.
+        const QByteArray className(s_fakeClassName);
+        int offsetOfStringdataMember = 2 * sizeof(QByteArrayData);
+        int stringdataOffset = 0;
+        m_stringData = new char[offsetOfStringdataMember + className.size() + 1 + signalName.size() + 1];
+        writeString(m_stringData, /*index*/0, className, offsetOfStringdataMember, stringdataOffset);
+        writeString(m_stringData, 1, signalName, offsetOfStringdataMember, stringdataOffset);
 
         // static metaobject
         staticMetaObject.d.superdata = &QObject::staticMetaObject;
-        staticMetaObject.d.stringdata = m_stringData.data();
-        staticMetaObject.d.data = m_data;
+        staticMetaObject.d.stringdata = reinterpret_cast<const QByteArrayData *>(m_stringData);
+        staticMetaObject.d.data = m_data.data();
+        staticMetaObject.d.relatedMetaObjects = 0;
         staticMetaObject.d.extradata = 0;
     }
 
     /**
     * Destructor.
     */
-    virtual ~MetaFunction() {}
+    virtual ~MetaFunction() {
+        delete[] m_stringData;
+    }
 
     /**
     * The static \a QMetaObject instance that provides the
@@ -121,7 +153,7 @@ public:
         if (! _clname) {
             return 0;
         }
-        if (! strcmp(_clname, m_stringData)) {
+        if (! qstrcmp(_clname, s_fakeClassName)) {
             return static_cast<void *>(const_cast< MetaFunction * >(this));
         }
         return QObject::qt_metacast(_clname);
@@ -138,10 +170,48 @@ protected:
     QPointer<QObject> m_sender;
     /// The signature.
     QByteArray m_signature;
+
+private:
     /// The stringdata.
-    QByteArray m_stringData;
+    char* m_stringData;
     /// The data array.
-    uint m_data[21];
+    QVector<uint> m_data;
+
+    // from Qt5's qmetaobjectbuilder.cpp
+    static void writeString(char *out, int i, const QByteArray &str,
+            const int offsetOfStringdataMember, int &stringdataOffset)
+    {
+        int size = str.size();
+        qptrdiff offset = offsetOfStringdataMember + stringdataOffset
+            - i * sizeof(QByteArrayData);
+        const QByteArrayData data =
+            Q_STATIC_BYTE_ARRAY_DATA_HEADER_INITIALIZER_WITH_OFFSET(size, offset);
+        memcpy(out + i * sizeof(QByteArrayData), &data, sizeof(QByteArrayData));
+        memcpy(out + offsetOfStringdataMember + stringdataOffset, str.constData(), size);
+        out[offsetOfStringdataMember + stringdataOffset + size] = '\0';
+        stringdataOffset += size + 1;
+    }
+
+    // from Qt5's QMetaObjectPrivate
+    QList<QByteArray> parameterTypeNamesFromSignature(const char *signature)
+    {
+        QList<QByteArray> list;
+        while (*signature && *signature != '(')
+            ++signature;
+        while (*signature && *signature != ')' && *++signature != ')') {
+            const char *begin = signature;
+            int level = 0;
+            while (*signature && (level > 0 || *signature != ',') && *signature != ')') {
+                if (*signature == '<')
+                    ++level;
+                else if (*signature == '>')
+                    --level;
+                ++signature;
+            }
+            list += QByteArray(begin, signature - begin);
+        }
+        return list;
+    }
 };
 
 }
